base project implementation

--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -24,7 +24,7 @@ RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && \
     echo "fr_FR.UTF-8 UTF-8" >> /etc/locale.gen && \
     locale-gen
 
-WORKDIR /home/wwwroot/sf3
+WORKDIR /home/wwwroot/sf4/API
 
 EXPOSE 9000
 CMD ["php-fpm"]
