--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ MYSQL_DATABASE= "sf4"
 MYSQL_USER= "sf4"
 MYSQL_PASSWORD= "sf4"
 
-SYMFONY_APP=./PRM_API
+SYMFONY_APP=./API
 ANGULAR_APP=./Angular-project
