--- a/.docker/config/vhosts/sf4.conf
+++ b/.docker/config/vhosts/sf4.conf
@@ -1,12 +1,12 @@
 <VirtualHost *:80>
 
-        Define server_name sf3.local
-        Define basedocroot  /home/wwwroot/sf3
-        Define docrootweb   ${basedocroot}/web
+        Define server_name sf4.local
+        Define basedocroot  /home/wwwroot/sf4/API
+        Define docrootweb   ${basedocroot}/public
         Define logdir   /var/log/apache2/
 
         <FilesMatch .php$>
-         SetHandler "proxy:fcgi://sf3_php:9000"
+         SetHandler "proxy:fcgi://sf4_php:9000"
         </FilesMatch>
 
         ServerName ${server_name}
@@ -34,7 +34,7 @@
         </Directory>
 
         <Directory ${docrootweb}>
-            DirectoryIndex ${docrootweb}/app_dev.php
+            DirectoryIndex ${docrootweb}/index.php
             <IfModule mod_negotiation.c>
                 Options -MultiViews
             </IfModule>
@@ -53,12 +53,12 @@
                 RewriteCond %{REQUEST_FILENAME} -f
                 RewriteRule ^ - [L]
 
-                RewriteRule ^ %{ENV:BASE}/app_dev.php [L]
+                RewriteRule ^ %{ENV:BASE}/index.php [L]
             </IfModule>
 
             <IfModule !mod_rewrite.c>
                 <IfModule mod_alias.c>
-                    RedirectMatch 302 ^/$ /app_dev.php/
+                    RedirectMatch 302 ^/$ /index.php/
                 </IfModule>
             </IfModule>
         </Directory>
